--- a/online-zoo/src/pages/main/main_watch.css
+++ b/online-zoo/src/pages/main/main_watch.css
@@ -6,16 +6,6 @@
   padding-top: 80px;
 }
 
-/* .watch__ellipse {
-  position: relative;
-  width: 465px;
-  height: 465px;
-  left: calc(50% - 465px/2 + 239.5px);
-  top: 12px;
-  border-radius: 50%;
-  background: linear-gradient(113.96deg, #F9804B 1.49%, #FE9013 101.44%);
-} */
-
 .watch__inner {
   position: relative;
   width: 1160px;
@@ -53,7 +43,6 @@
 }
 
 .watch__button {
-  /* margin: 60px 0 0 102px; */
   width: 298px;
   height: 54px;
   background-color: #F9804B;
@@ -90,13 +79,6 @@
     height: 584px;
   }
 
-  /* .watch__ellipse {
-    width: 367px;
-    height: 367px;
-    left: calc(50% - 367px/2 + 139.5px);
-    top: -11px;
-  } */
-
   .watch__inner {
     width: 940px;
   }
@@ -115,7 +97,6 @@
   }
 
   .watch__button {
-    /* margin: 42px 0 0 102px; */
     top: 84px;
     left: 56.8%;
   }
@@ -127,14 +108,10 @@
     height: 373px;
     margin-top: -34px;
     padding-top: 34px;
+    overflow: hidden;
   }
 
-  /* .watch__ellipse {
-    width: 237.6px;
-    height: 237.6px;
-    left: 51.7%;
-    top: 10px;
-  } */
+
 
   .watch__inner {
     width: 600px;
@@ -154,8 +131,6 @@
   }
 
   .watch__button {
-    /* margin: 0;
-    position: relative; */
     top: 42px;
     left: 0;
   }
